--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,5 +19,5 @@ jobs:
 
     - uses:  helaili/jekyll-action@v2
       with:
+        target_branch: gh-pages
         token: ${{ secrets.GITHUB_TOKEN }}
-
